--- a/data/docker_db/Dockerfile.pgvector
+++ b/data/docker_db/Dockerfile.pgvector
@@ -10,4 +10,5 @@ RUN apt-get update && \
     apt-get install -y postgresql-contrib && \
     rm -rf /var/lib/apt/lists/*
 
+RUN mkdir -p /docker-entrypoint-initdb.d/
 ADD scripts /docker-entrypoint-initdb.d/
