--- a/client/server/package.json
+++ b/client/server/package.json
@@ -5,15 +5,16 @@
     "main": "app.js",
     "type": "module",
     "scripts": {
-      "start": "node app.js",
-      "dev": "nodemon app.js", 
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node app.js",
+        "dev": "nodemon app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "license": "ISC",
     "dependencies": {
-      "cors": "^2.8.5",
-      "express": "^4.18.2",
-      "nodemon": "^3.0.1",
-      "socket.io": "^4.7.2"
+        "axios": "^1.7.9",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "nodemon": "^3.0.1",
+        "socket.io": "^4.7.2"
     }
 }
