--- a/client/package.json
+++ b/client/package.json
@@ -12,14 +12,19 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "firebase": "^11.3.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
+    "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.9",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@eslint/js": "^9.13.0",
+    "@react-router/dev": "^7.1.5",
+    "@tailwindcss/vite": "^4.0.6",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -28,7 +33,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
-    "tailwindcss": "^3.4.14",
-    "vite": "^5.4.9"
+    "vite": "^5.4.11"
   }
 }
