--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,16 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "flowbite-react patch"
   },
   "dependencies": {
     "axios": "^1.7.7",
     "firebase": "^11.3.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "flowbite-react": "^0.11.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.6"
   },
