--- a/client/server/package.json
+++ b/client/server/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "axios": "^1.7.9",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
         "express": "^4.18.2",
         "nodemon": "^3.0.1",
         "socket.io": "^4.7.2"
