Revert "Merge branch 'main' of https://github.com/crhexa/prosperiti"
This reverts commit 08e1474e009a72f0f38de3c99864c522ad7af0af, reversing
changes made to fb7060cdf73ce2d1e95b1bcb3da8214a6ac441c5.

--- a/data/docker_db/docker-compose.yml
+++ b/data/docker_db/docker-compose.yml
@@ -1,24 +1,26 @@
 services:
   pgvector:
-    image: ankane/pgvector
-    ports:
-     - 5432:5432
-    container_name: pgvector
+    build:
+      context: .
+      dockerfile: Dockerfile.pgvector
+    container_name: prosperiti_pg
     environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: prosperiti_db
+    ports:
+      - "5432:5432"
     volumes:
       - app_data:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4
-    ports:
-      - 8080:80
     container_name: pgadmin
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: password
+    ports:
+      - "8080:80"
     depends_on:
       - pgvector
 
