--- a/ai/config.json
+++ b/ai/config.json
@@ -2,5 +2,6 @@
     "version": "v0.1",
     "checkpoint": "gpt-4o-mini-2024-07-18",
     "embedding_model": "all-MiniLM-L6-v2",
-    "embedding_dimension": 384
+    "embedding_dimension": 384,
+    "top_k": 5
 }
