--- a/server/config.json
+++ b/server/config.json
@@ -3,5 +3,6 @@
     "checkpoint": "gpt-4o-mini-2024-07-18",
     "embedding_model": "all-MiniLM-L6-v2",
     "embedding_dimension": 384,
-    "top_k": 5
+    "threshold": 0.1,
+    "top_k": 1
 }
