--- a/nginx.conf
+++ b/nginx.conf
@@ -1,26 +1,28 @@
-server {
-    listen 80;
-    server_name prosperiti.info www.prosperiti.info;
+http {
+    server {
+        listen 80;
+        server_name prosperiti.info www.prosperiti.info;
 
-    # Redirect all HTTP to HTTPS
-    return 301 https://$host$request_uri;
-}
+        # Redirect all HTTP to HTTPS
+        return 301 https://$host$request_uri;
+    }
 
-server {
-    listen 443 ssl;
-    server_name prosperiti.info www.prosperiti.info;
+    server {
+        listen 443 ssl;
+        server_name prosperiti.info www.prosperiti.info;
 
-    ssl_certificate /etc/letsencrypt/live/prosperiti.info/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/prosperiti.info/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/prosperiti.info/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/prosperiti.info/privkey.pem;
 
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    location / {
-        proxy_pass http://127.0.0.1:5173;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        location / {
+            proxy_pass http://127.0.0.1:5173;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
